--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,16 +6,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_app"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_app"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiTest"
         tools:targetApi="31">
         <activity
+            android:theme="@style/NoActionBarSplash"
             android:name=".CreateIconActivity"
             android:exported="false" />
         <activity
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/NoActionBarSplash"
             android:name=".CreateTextActivity"
             android:exported="false" />
         <activity
@@ -23,18 +26,18 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarHome" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarSplash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".IntroScreenActivity"
