--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo_app"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EmojiTest"
-        tools:targetApi="31">
+        android:theme="@style/Theme.EmojiTest">
         <activity
             android:theme="@style/NoActionBarSplash"
             android:name=".CreateIconActivity"
