--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiTest">
         <activity
-            android:theme="@style/NoActionBarSplash"
-            android:name=".CreateIconActivity"
+            android:name=".CustomizeSmiley"
             android:exported="false" />
         <activity
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/NoActionBarSplash"
+            android:name=".CreateIconActivity"
+            android:exported="false"
+            android:theme="@style/NoActionBarSplash" />
+        <activity
             android:name=".CreateTextActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/NoActionBarSplash"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarHome" >
+            android:theme="@style/NoActionBarHome">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,9 +38,7 @@
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarSplash">
-
-        </activity>
+            android:theme="@style/NoActionBarSplash"></activity>
         <activity
             android:name=".IntroScreenActivity"
             android:exported="false"
