update bg create icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"
+    <uses-permission
+        android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -15,22 +18,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiTest">
         <activity
-            android:screenOrientation="portrait"
+            android:name=".ResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".CustomizeSmiley"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".LoadImageScreenActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".CreateIconActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/NoActionBarSplash" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".CreateTextActivity"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/NoActionBarSplash"
             android:windowSoftInputMode="adjustPan" />
         <activity
@@ -48,7 +54,9 @@
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarSplash"></activity>
+            android:theme="@style/NoActionBarSplash">
+
+        </activity>
         <activity
             android:name=".IntroScreenActivity"
             android:exported="false"
