--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.QuadFlask:colorpicker:0.0.15'
+    implementation 'jp.wasabeef:blurry:4.0.1'
+    implementation 'com.airbnb.android:lottie:5.0.3'
 }
